Version 6.6.2
- Added warning (-Warray-index) for constant array indices out of bounds
- Allow warnings and optimizations to be turned off with a `no-` prefix (so `warn(no-init-vars)` is like `warn(!init-vars)`).
- Added some peephole optimizations to remove unnecessary sign extension
- Some internal changes to make recovering from missing xxd easier

Version 6.6.1
- Changed type of `dat` array in C++ output to `unsigned char`
- Fixed function type usage in -2nu for some Spin method pointers
- Updated copyright notices in COPYING.LIB

Version 6.6.0
- Added pc_key and pc_mouse to -gbrk
- Added missing !! and ! postfix operators for Spin2
- Implemented proper boolean type for C
- Fixed -- operator for floats
- Made the BASIC boolean type a distinct type
- Made BASIC booleans print as "true" and "false"

Version 6.5.4
- Minor optimization improvement (and major documentation improvements) courtesy of Ada

Version 6.5.3
- Fixed an incorrect relocation check that caused spurious internal errors
- Implemented NAN() method for Spin2
- Implemented rename for host (9P) file system
- Improved error message for objects that are not found
- Reduced likelihood of duplicate function definitions in sub-objects

Version 6.5.2
- Really added BASIC date/time functions (inadvertently not checked in)
- Fixed *scanf() for floating point values
- Fixed a problem parsing attributes attached to static functions.

Version 6.5.1
- Changed some warnings about unused wcz flags into errors (when the corresponding instruction requires the flags)
- Fixed some problems with line numbers in errors & warnings after #include
- Fixed a potential bug with fcaching of loops with a branch between them (thanks to Ada)
- Fixed array access in ORG code in nu output
- Improved some error messages
- Various portability improvements for the source code itself

Version 6.5.0
- Added MKDIR function for BASIC
- Added support for NeoYume style ARGv parameters in C
- Added execl() function in C